--- a/lessons/checkpoint_1/09_plurals.html
+++ b/lessons/checkpoint_1/09_plurals.html
@@ -88,48 +88,48 @@ title: Elisa's Duo Polski - Plurals
         <p>Plurals of nouns have many different endings so it would be better to just memorize the words by themselves. However, a few patterns we can see:
 
             Ending in -<span class="red-text">y</span> (sometimes replacing -<span class="blue-text">a</span>):</p>
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Kobiet<span class="blue-text">a</span> </td><td> Kobiet<span class="red-text">y</span></td></tr>
                 <tr><td> Kot </td><td> Kot<span class="red-text">y</span></td></tr>
-            </table></div>
+            </table>
 
             <p>Ending in -<span class="red-text">y</span> after -<span class="blue-text">ie</span>:</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Chłop<span class="blue-text">ie</span>c </td><td> Chłopc<span class="red-text">y</span></td></tr>
                 <tr><td> P<span class="blue-text">ie</span>s </td><td> Ps<span class="red-text">y</span></td></tr>
-            </table></div>
+            </table>
 
             <p>Ending in -<span class="red-text">i</span> replacing -<span class="blue-text">a</span>:</p>
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Dziewczynk<span class="blue-text">a</span> </td><td> dziewczynk<span class="red-text">i</span></td></tr>
                 <tr><td> Mężczyzn<span class="blue-text">a</span> </td><td> mężczyźn<span class="red-text">i</span></td></tr>
-            </table></div>
+            </table>
 
             <p>Ending in -<span class="red-text">ie</span> after a soft consonant (<span class="blue-text">ńść…</span>) and losing the diacritic</p>
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Ko<span class="blue-text">ń</span> </td><td> Ko<span class="red-text">nie</span></td></tr>
                 <tr><td> Sło<span class="blue-text">ń</span> </td><td> sło<span class="red-text">nie</span> </td></tr>
-            </table></div>
+            </table>
 
             <p>Ending in -<span class="blue-text">o</span> changes to -<span class="red-text">a</span>:</p>
             
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Jabłk<span class="blue-text">o</span> </td><td> jabłk<span class="red-text">a</span> </td></tr>
                 <tr><td> Ciasteczk<span class="blue-text">o</span> </td><td> ciasteczk<span class="red-text">a</span></td></tr>
-            </table></div>
+            </table>
 
             <p>And so on, but there’s many rules so let’s better remember each word.</p>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <span class="blue-text">Ryby</span> to mała zwierzęta. </td><td> Fish are small animals.</td></tr>
             <tr><td> <span class="blue-text">Dziewczynki</span> lubią konie. </td><td> The girls like horses.</td></tr>
             <tr><td> <span class="blue-text">Dziewczynki</span> lubią psy i koty.  </td><td> Girls like dogs and cats.*</td></tr>
             <tr><td> <span class="blue-text">Psy</span> jedzą jabłka. </td><td> The dogs are eating apples.</td></tr>
             <tr><td> To są <span class="blue-text">dzieci</span>. </td><td> These are children.</td></tr>
-        </table></div>
+        </table>
 
         <p>Notice that just like in singular “To jest + noun" will be in nominative, "To są + noun” will also be in nominative.
 
@@ -143,12 +143,12 @@ title: Elisa's Duo Polski - Plurals
 
         <p>Non-masculine personal (niemęskoosobowy) (abbreviated nmp.) plural (pl.) adjectives will end in -e in nominative. So anything that’s not a male human, will have adjectives ending with -e.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Konie są duż<span class="red-text">e</span> </td><td> The horses are big</td></tr>
             <tr><td> Jabłka są smaczn<span class="red-text">e</span> </td><td> The apples are tasty</td></tr>
             <tr><td> Now<span class="red-text">e</span> dziewczynki </td><td> New girls</td></tr>
             <tr><td> Star<span class="red-text">e</span> psy </td><td> old dogs</td></tr>
-        </table></div>
+        </table>
 
         <h4> Masculine personal (męski osobowy) nominative plural adjectives </h4>
 
@@ -156,30 +156,30 @@ title: Elisa's Duo Polski - Plurals
 
             -<span class="blue-text">ry</span> changes to to -<span class="red-text">rzy</span>:</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Dob<span class="red-text">rzy</span> ludzie </td><td> Good people. (s. dobry)</td></tr>
                 <tr><td> Oni są sta<span class="red-text">rzy</span> </td><td> They are old. (s. stary)</td></tr>
-            </table></div>
+            </table>
 
             <p>Ł,ż, ending in -i and loose the diacritics:</p>
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Ź<span class="red-text">li</span> mężczyźni </td><td> bad men (s. z<span class="blue-text">ły</span>)</td></tr>
                 <tr><td> Du<span class="red-text">zi</span> chłopcy i ma<span class="red-text">li</span> chłopcy </td><td> big boys and small boys (s. du<span class="blue-text">ży</span> s. ma<span class="blue-text">ły</span>)</td></tr>
-            </table></div>
+            </table>
 
             <p>Ending in -<span class="red-text">i</span>:</p>
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Now<span class="red-text">i</span> chłopcy </td><td> new boys (s. now<span class="blue-text">y</span>)</td></tr>
                 <tr><td> Smaczn<span class="red-text">i</span> chłopcy </td><td> tasty boys (s. smaczn<span class="blue-text">y</span>) (said a monster from a fairy tale)</td></tr>
-            </table></div>
+            </table>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Duże kobiety, duzi mężczyźni i duże dzieci </td><td> Big women, big men and big children</td></tr>
             <tr><td> Mali chłopcy, małe dziewczynki </td><td> Little boys, little girls.</td></tr>
             <tr><td> Są starzy </td><td> They are old (male they)</td></tr>
-        </table></div>
+        </table>
 
     </div>
 
@@ -203,11 +203,11 @@ title: Elisa's Duo Polski - Plurals
 
             This simple example shows us the accusative plural being the same as nominative, but we can use it from now on knowing for certain how it works:</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr><td> Chłopcy mają <span class="blue-text">psy</span> </td><td> The boys have dogs. </td></tr>
                 <tr><td> Mężczyźni jedzą <span class="blue-text">jajka</span> </td><td> The men are eating eggs. </td></tr>
                 <tr><td> Mamy <span class="blue-text">koty</span>. </td><td> We have cats. </td></tr>
-            </table></div>
+            </table>
 
             <p>Now, Masculine personal pronouns are the same as in genitive, which we haven't seen yet, and Duolingo will probably not introduce yet.</p>
 
@@ -219,10 +219,10 @@ title: Elisa's Duo Polski - Plurals
         For now, let's see non-masculine personal plural:
         Accusative adjectives in nmp pl end in -<span class="red-text">e</span>.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Nowi chłopcy mają star<span class="red-text">e</span> psy </td><td> The new boys have old dogs. </td></tr>
             <tr><td> Tamta kobieta ma duż<span class="red-text">e</span> konie </td><td> That woman has big horses. </td></tr>
-        </table></div>
+        </table>
 
         <p>Accusative adjectives in mp pl are -ych/ -ich.</p>
 
@@ -240,27 +240,27 @@ title: Elisa's Duo Polski - Plurals
 
         All nouns, regardless of gender, change from their ending in nominative plural to -<span class="red-text">ami</span>.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Oni są mężczyzn<span class="red-text">ami</span> </td><td> They are men. (Mężczyźn<span class="blue-text">i</span>)</td></tr>
             <tr><td> Jesteśmy kobiet<span class="red-text">ami</span> </td><td> We are women. (Kobiet<span class="blue-text">y</span>)</td></tr>
-        </table></div>
+        </table>
         <p>A few exceptions exist, even in this Duolingo lesson. Some words don't end in -ami, but instead remove the ending vowels, add a diacritic to the last consonant and end in -mi. </p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Wy jesteście lud<span class="red-text">źmi</span> </td><td> You are people. (Lud<span class="blue-text">zie</span>)</td></tr>
             <tr><td> Nie jesteśmy dzie<span class="red-text">ćmi</span>! </td><td> We aren’t children! (Dzie<span class="blue-text">ci</span>)</td></tr>
-        </table></div>
+        </table>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Chłopcy są dziećmi </td><td> Boys are children</td></tr>
             <tr><td> One są ludźmi i my jesteśmy ludźmi </td><td> They are people and we are people.</td></tr>
             <tr><td> Wy jesteście ludźmi </td><td> You are people</td></tr>
             <tr><td> Jesteście dziećmi? </td><td> Are you children?</td></tr>
             <tr><td> Wy jesteście mężczyznami, my jesteśmy kobietami </td><td> You are men, we are women.</td></tr>
             <tr><td> One są kobietami </td><td> They are women.</td></tr>
-        </table></div>
+        </table>
 
         <h3> Instrumental Plural Adjectives - Narzędnik </h3>
 
@@ -269,10 +269,10 @@ title: Elisa's Duo Polski - Plurals
         I haven’t seen these show up in Duolingo, but well, we’re already here aren’t we?
 
         All adjectives in the instrumental case in plural, regardless of gender, end in -ymi, except for adjectives that end in -g or -k, in which case they end in -imi.</p>
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Oni są dobr<span class="red-text">ymi</span> ludźmi </td><td> They are good people. </td></tr>
             <tr><td> Mój brat jeździ dro<span class="red-text">gimi</span> samochodami. </td><td> My brother drives expensive cars.</td></tr>
-        </table></div>
+        </table>
     </div>
 
     <div class="regular">
@@ -330,7 +330,7 @@ We also learned the way they change in accusative: Ten, tego, tę, to, tamten, t
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <span class="blue-text">Ci</span> ludzie jedzą kaczki </td><td> These people eat ducks</td></tr>
             <tr><td> <span class="blue-text">Tamci</span> mali chłopcy i <span class="blue-text">tamte</span> małe dziewczynki </td><td> Those little boys and those little girls</td></tr>
             <tr><td> <span class="blue-text">Tamte</span> kobiety jedzą posiłek </td><td> Those women are eating a meal</td></tr>
@@ -339,7 +339,7 @@ We also learned the way they change in accusative: Ten, tego, tę, to, tamten, t
             <tr><td> <span class="blue-text">Ci</span> chłopcy mają kanapkę </td><td> These boys have a sandwich.</td></tr>
             <tr><td> <span class="blue-text">Tamte</span> kobiety jedzą ciasteczka </td><td> Those women are eating cookies.</td></tr>
             <tr><td> <span class="blue-text">Te</span> kobiety i tamten mężczyzna jedzą obiad </td><td> These women and that man are eating lunch.</td></tr>
-        </table></div>
+        </table>
     </div>
 
     <div class="nav-buttons">
