--- a/lessons/checkpoint_1/10_clothing.html
+++ b/lessons/checkpoint_1/10_clothing.html
@@ -59,12 +59,12 @@ title: Elisa's Duo Polski - Clothing
 
         * We have seen words like this before, and it’s another topic of Polish grammar. How to make things tiny or cute. It’s not this lesson’s content, but I’ll put it as just a little note, in case in the future other words like this might appear in Duolingo. If you have studied Spanish before this would be easy to understand, but here’s a few examples:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Dziewczyna - Girl (teen) </td><td> Dziewczyn<span class="red-text">ka</span> - Little girl
             <tr><td>Ciasto - Cake </td><td> Ciast<span class="pink-text">ecz</span><span class="red-text">ka</span> - Cookie
             <tr><td>Skarpety - Socks </td><td> Skarpet<span class="red-text">ki</span> - Socksies
             <tr><td>Herbata - Tea (actual tea leaves) </td><td> Herbat<span class="red-text">ka</span> - Tea (anything that’s an infusion, including tea)
-        </table></div>
+        </table>
 
     </div>
 
@@ -123,7 +123,7 @@ title: Elisa's Duo Polski - Clothing
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Mali ludzie noszą małe ubrania </td><td> Small people wear small clothes. </td></tr>
             <tr><td> To jest but </td><td> This is a shoe </td></tr>
             <tr><td> Te ubrania są stare </td><td> These clothes are old </td></tr>
@@ -134,7 +134,7 @@ title: Elisa's Duo Polski - Clothing
             <tr><td> Ona nosi czapkę </td><td> She wears a cap </td></tr>
             <tr><td> Ona ma now<span class="dark-blue-text">e</span> majtki </td><td> She has new panties* (remember plural nmp. adjectives end in -e.) </td></tr>
             <tr><td> On nosi star<span class="dark-blue-text">e</span> spodnie </td><td> He wears old trousers* (remember plural nmp. adjectives end in -e.) </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
