--- a/lessons/checkpoint_1/11_present_1.html
+++ b/lessons/checkpoint_1/11_present_1.html
@@ -22,7 +22,7 @@ title: Elisa's Duo Polski - Present 1
 
         <h3> Nouns - Rzeczowniki </h3>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -38,7 +38,7 @@ title: Elisa's Duo Polski - Present 1
                 <tr><td>    ♂</td><td> Głos     </td><td> Voice </td></tr>
                 <tr><td>pl. ♂</td><td> Głosy    </td><td> Voices </td></tr>
             </tbody>
-        </table></div>
+        </table>
 
         <h3> Prepositions - Przyimki </h3>
 
@@ -161,14 +161,14 @@ title: Elisa's Duo Polski - Present 1
 
         <span class="section"> For example - Na przykład </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <span class="violet-text">Chodzisz</span> do domu </td><td> You walk home (as a habit, daily perhaps) </td></tr>
             <tr><td> <span class="blue-text">Idziemy</span> do domu </td><td> We are going home (right now)  </td></tr>
             <tr><td> <span class="violet-text">Chodzisz</span> do szkoły? </td><td> Do you go to school? (or rather, do you attend school?) </td></tr>
             <tr><td> <span class="blue-text">Idę</span> do szkoły </td><td> I am going / walking to school (right now, i am on my way to school) </td></tr>
             <tr><td> Ja <span class="violet-text">chodzę</span> </td><td> I walk (habitually) </td></tr>
             <tr><td> Ty i ja <span class="blue-text">idziemy</span> </td><td> We are walking / we are going on foot </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
@@ -177,10 +177,10 @@ title: Elisa's Duo Polski - Present 1
 
         <p>You might have noticed but, consider the sentence Duolingo presented us with:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Chodzisz <span class="blue-text">do</span> dom<span class="red-text">u</span> </td><td> You walk home (as a habit, daily perhaps)</td></tr>
             <tr><td> Idę <span class="blue-text">do</span> szkoł<span class="red-text">y</span> </td><td> I am going / walking to school (right now, i am on my way to school)</td></tr>
-        </table></div>
+        </table>
 
         <p>That -<span class="red-text">u</span> and -<span class="red-text">y</span> endings are something we haven’t seen before. It is a new grammatical case (odmiana przypadek) called <u>Genitive</u> (<span class="violet-text">dopełniacz</span>). It is used in general to answer the question “whose?”, but also after certain verbs, prepositions, to count, among other uses. Here’s a complete guide to the genitive case:
 
@@ -203,26 +203,26 @@ title: Elisa's Duo Polski - Present 1
         <p>Animate masculine (both people and animals) end in -<span class="red-text">a</span>.
         If it doesn’t have a vowel it’s just added at the end:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Kot</td>        <td>Kot<span class="red-text">a</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Animate Masculines with diphthong <span class="blue-text">ie</span></span>
         
         <p>If it has -<span class="blue-text">ie</span> before the last consonant, it is removed and -<span class="red-text">a</span> is added at the end.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Chłop<span class="blue-text">ie</span>c</td>    <td>Chłopc<span class="red-text">a</span></td></tr>
             <tr><td>P<span class="blue-text">ie</span>s</td>        <td>Ps<span class="red-text">a</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Animate Masculines ending with -<span class="blue-text">ś</span>, -<span class="blue-text">ć</span>, -<span class="blue-text">ń</span>, -<span class="blue-text">ź</span></span>
         
         <p>If it ends in a soft consonant, replace with their phonological match (<b>-ś</b>, <b>-ć</b>, <b>-ń</b>, <b>-ź</b> to <b>-si</b>, <b>-ci</b>, <b>-ni</b>, <b>-zi</b>) and -<span class="red-text">a</span> is added at the end.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Ko<span class="blue-text">ń</span></td>        <td>Ko<span class="blue-text">ni</span><span class="red-text">a</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Exceptions: Personal Masculine nouns ending with -a follow Female rules</span>
         <p>(for example: Mężczyzna)</p>
@@ -231,36 +231,36 @@ title: Elisa's Duo Polski - Present 1
 
         <span class="section">Most inanimate masculine nouns in Genitive have the ending -<span class="red-text">u</span>.</span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Dom</td>        <td>Dom<span class="red-text">u</span></td></tr>
             <tr><td>Obiad</td>        <td>Obiad<span class="red-text">u</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Exceptions</span>
 
         <p>Some inanimate objects behave like animate objects grammatically. Remember our friend the tomato? Bread is also his friend as well. There is no specific rule for this so… I don’t know how to help...</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Chleb</td>        <td>Chleb<span class="red-text">a</span></td></tr>
             <tr><td>Pomidor</td>    <td>Pomidor<span class="red-text">a</span></td></tr>
-        </table></div>
+        </table>
 
         <h4> Neuter - Rodzaj Nijaki </h4>
 
         <span class="section">All neuter nouns in Genitive have the ending -<span class="red-text">a</span>.</span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Dziecko</td>    <td>Dzieck<span class="red-text">a</span></td></tr>
             <tr><td>Jabłko</td>        <td>Jabłk<span class="red-text">a</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Exception: neuter nouns ending in -<span class="blue-text">ę</span></span>
 
         <p>neuter nouns ending in -<span class="blue-text">ę</span> get the ending -<span class="red-text">ta</span>.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Zwierz<span class="blue-text">ę</span></td>    <td>Zwierz<span class="blue-text">ę</span><span class="red-text">ta</span></td></tr>
-        </table></div>
+        </table>
 
         <h4> Feminine - Rodzaj Żeński </h4>
 
@@ -268,29 +268,29 @@ title: Elisa's Duo Polski - Present 1
 
         <p>For both masculine personal and femenine, if it ends with a, it changes into <span class="red-text">y</span></p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Szkoł<span class="blue-text">a</span></td>            <td>Szkoł<span class="red-text">y</span></td></tr>
             <tr><td>Mężczyzn<span class="blue-text">a</span></td>         <td>Mężczyzn<span class="red-text">y</span></td></tr>
             <tr><td>Kobiet<span class="blue-text">a</span></td>        <td>Kobiet<span class="red-text">y</span></td></tr>
-        </table></div>
+        </table>
 
         <span class="section">Feminine and Masculine personal ending with -<span class="blue-text">ka</span>, -<span class="blue-text">ga</span>, <span class="blue-text">ć</span>, <span class="blue-text">ź</span>, <span class="blue-text">l</span></span>
 
         <p>For feminine nouns with -ka or -ga, the -y is replaced with -<span class="red-text">i</span>.
         For ć and ź, the phonological match (ci, zi) replaces them.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Dziewczynk<span class="blue-text">a</span></td>        <td>Dziewczynk<span class="red-text">i</span></td></tr>
             <tr><td>Złoś<span class="blue-text">ć</span></td>            <td>Złoś<span class="red-text">ci</span></td></tr>
             <tr><td>Koszul<span class="blue-text">a</span></td>        <td>Koszul<span class="red-text">i</span></td></tr>
-        </table></div>
+        </table>
 
     </div>
     <div class="regular-off-white">
 
         <h3> Practice exercises - Ćwiczyć ćwiczenia </h3>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Chodzisz do domu </td><td> You walk home       </td><td> Genitive</td></tr>
             <tr><td> Idziemy do domu </td><td> We are going home   </td><td> Genitive</td></tr>
             <tr><td> Chodzisz do szkoły? </td><td> Do you go to school?   </td><td> Genitive</td></tr>
@@ -326,7 +326,7 @@ title: Elisa's Duo Polski - Present 1
             <tr><td> Słyszycie tamtego mężczyznę? </td><td> Do you hear that man?       </td><td> Accusative Singular</td></tr>
             <tr><td> On słyszy głosy </td><td> He hears voices       </td><td> Accusative Plural</td></tr>
             <tr><td> Czy ja słyszę kota? </td><td> Am I hearing a cat?       </td><td> Accusative Singular</td></tr>
-        </table></div>
+        </table>
 
     </div>
 
