--- a/lessons/checkpoint_1/15_present_2.html
+++ b/lessons/checkpoint_1/15_present_2.html
@@ -22,7 +22,7 @@ title: Elisa's Duo Polski - Present 2
 
         <h3> Nouns - Rzeczowniki </h3>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -33,7 +33,7 @@ title: Elisa's Duo Polski - Present 2
             <tbody>
                 <tr><td>    ♀</td><td> Muzyka      </td><td> Music </td></tr>
             </tbody>
-        </table></div>
+        </table>
 
         <h3> Verbs - Czasowniki </h3>
 
@@ -130,13 +130,13 @@ title: Elisa's Duo Polski - Present 2
 
         <p>Now, <span class="pink-text">potrzebować</span> means to need something or someone. It’s different from “I need to do” which is closer to the word must. A few examples:
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Tamte dzieci potrzebują kobiet<span class="red-text">y</span> </td><td> Those children need a woman </td></tr>
             <tr><td>Potrzebujesz kaw<span class="red-text">y</span>! </td><td> You need coffee! (geez, grumpy, are we?) </td></tr>
             <tr><td>On potrzebuje kot<span class="red-text">a</span> </td><td> He needs a cat </td></tr>
             <tr><td>Potrzebujecie ko<span class="red-text">nia</span>? </td><td> Do you need a horse? </td></tr>
             <tr><td>Potrzebuję <span class="red-text">go</span>! </td><td> I need him! (No, you don’t, hon) </td></tr>
-        </table></div>
+        </table>
 
         <p>Notice the nouns and pronouns in <span class="red-text">genitive</span>. Apparently for native Polish people, it’s a common mistake to use potrzebować with accusative, but we should learn the correct form here. 
 
@@ -147,37 +147,37 @@ title: Elisa's Duo Polski - Present 2
 
         <p>Then, the verb <span class="pink-text">słuchać</span> means to listen to something, or someone. It’s different from <span class="blue-text">słyszeć</span> which is just to hear. <span class="pink-text">Słuchać</span> means to listen attentively. Also, in some cases, it is used colloquially to mean to obey what someone else is telling you to do. Let’s see some examples:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Ja słucham muzyk<span class="red-text">i</span> </td><td> I am listening to music </td></tr>
             <tr><td> Mały chłopiec słucha kobiet<span class="red-text">y</span> </td><td> The little boy is listening to the woman (Either just listening or obeying)</td>
             <tr><td> My słuchamy tam<span class="red-text">tego</span> kot<span class="red-text">a</span> </td><td> We are listening to that cat (He must have a very compelling speech…) </td></tr>
             <tr><td> Ty słuchasz <span class="red-text">tej</span> kobiet<span class="red-text">y</span>? </td><td> Are you listening to this woman? </td></tr>
             <tr><td> Słucham <span class="red-text">cię</span> </td><td> I am listening to you </td></tr>
-        </table></div>
+        </table>
 
         <p>Again, I marked the <span class="red-text">genitive</span> pronouns and nouns in <span class="red-text">red</span>. Let's see another example about word order and emphasis:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Nie słuchamy ich </td><td> We don’t listen to them </td></tr>
             <tr><td> <u>My</u> ich nie słuchamy </td><td> <u>We</u> don’t listen to them (as opposed to other people who do listen) </td></tr>
             <tr><td> <u>Ich</u> nie słuchamy </td><td> <u>Them</u>, we don’t listen to (As opposed to other people we do listen to) </td></tr>
-        </table></div>
+        </table>
         
         <span class="section">Jechać, iść, chodzić</span>
 
         <p>Now, Duolingo only pointed this verb to me once in the entire 5 levels, but it’s worth checking:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <span class="red-text">Jadę</span> do domu </td><td> I am going home </td></tr>
-        </table></div>
+        </table>
 
         <p>We can see it’s in present continuous, so how is this different from idę? Well, looking into the comments, we can see that it is used when the subject is using a vehicle. For example, a car, or a horse. Iść, on the other hand, implies walking on foot. We can equate it to the english verb ride: I am riding home. It sounds weird, but let’s just say that it works as an example.
 
         We also see a new example of going somewhere. This time, not a place, but a person:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Chodzimy do tego mężczyzny </td><td> We go to this man </td></tr>
-        </table></div>
+        </table>
 
         <p>It could be a guy they meet regularly for some business... hmm…
 
