--- a/lessons/checkpoint_1/16_family.html
+++ b/lessons/checkpoint_1/16_family.html
@@ -172,29 +172,29 @@ title: Elisa's Duo Polski - Family
         Note: Małżeństwo means both the institution of marriage, and the couple.
         For example:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Jesteśmy <span class="blue-text">małżeństwem</span> </td><td> We are married, we are a married couple, we are spouses </td></tr>
             <tr><td> Nasze małżeństwo jest dobre </td><td> Our marriage is good </td></tr>
             <tr><td> Tamto małżeństwo ma dziecko </td><td> That married couple has a child </td></tr>
             <tr><td> Twoje małżeństwo </td><td> Your marriage </td></tr>
-        </table></div>
+        </table>
 
         <p>Another note on vocabulary (It was discussed in the comments so I’ll add it here):
 
         Rodzic is a masculine personal noun… even if one of the parents is a woman, or even both. So even if it is a lesbian couple rasising a child, rodzice is still a masculine personal noun. 
         Example:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <u>Moi</u> rodzice nie mówią po angielsku </td><td> My parents do not speak English </td></tr>
-        </table></div>
+        </table>
 
         <p>And a last note on vocabulary:
         Rodzeństwo is a group noun, so it can be singular and still signify one or more siblings, and it can be plural and mean several groups, but that’s unlikely and they are both written the same way. Example:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Twoje rodzeństwo pije wino </td><td> Your sibling <u>is</u> drinking wine </td></tr>
             <tr><td></td>                            <td> OR Your siblings <u>are</u> drinking wine </td></tr>
-        </table></div>
+        </table>
 
         <p>This lesson has three functions:
         <ol>
@@ -208,7 +208,7 @@ title: Elisa's Duo Polski - Family
         Let’s see the sentences we see where the vocabulary is the main point from the lesson:
         I’ll mark the <span class="violet-text">accusative</span> words in <span class="violet-text">purple</span>, and <b>bold</b> the part where they <b>changed in declension</b>. <span class="blue-text">Instrumental</span> in <span class="blue-text">blue</span>.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Moje siostry <span class="violet-text">mnie</span> lubią </td><td> My sisters like me </td></tr>
             <tr><td> Moja córka <span class="violet-text">mnie</span> kocha </td><td> My daughter loves me </td></tr>
             <tr><td>  </td><td> We can study the order of words here again. <br> Technically we could say “Moja córka kocha mnie”, <br> but it sounds weird to most native speakers. </td></tr>
@@ -246,13 +246,13 @@ title: Elisa's Duo Polski - Family
             <tr><td>  -  </td></tr>
             <tr><td> Moja mama i mój tata to moja rodzina </td><td> My mom and my dad are my family </td></tr>
             <tr><td> Moja mama i mój tata są moją <span class="blue-text">rodzin<b>ą</b></span> </td><td> My mom and my dad are my family </td></tr>
-        </table></div>
+        </table>
 
         <h3> Instrumental - Narzędnik </h3>
 
         <p>We don’t really learn anything new about the instrumental case in this lesson, but it’s just that we hadn’t had the chance to practice it as much without this kind of vocabulary. So Duolingo put a bunch of exercises with the instrumental case in this lesson. I took note of most sentences through the five levels, and took note of some cases that had discussion in the comments. Let’s see:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Jestem <span class="blue-text">mam<b>ą</b></span> </td><td> I am a mom </td></tr>
             <tr><td> </td><td> From the comments, how would a mom say “I am mom” as if teaching a baby or striving to get recognized?  </td></tr>
             <tr><td> Jestem twoją <span class="blue-text">mam<b>ą</b></span> </td><td> I am your mom </td></tr>
@@ -276,20 +276,20 @@ title: Elisa's Duo Polski - Family
             <tr><td> Czy jesteś jej <span class="blue-text">córk<b>ą</b></span>? </td><td> Are you her daughter? </td></tr>
             <tr><td> Moja mama i mój tata są moją <span class="blue-text">rodzin<b>ą</b></span> </td><td> My mom and my dad are my family </td></tr>
             <tr><td> Brat i siostra są <span class="blue-text">rodzeństw<b>em</b></span> </td><td> A brother and a sister are siblings </td></tr>
-        </table></div>
+        </table>
 
         <h3> Possessive Genitive </h3>
 
         <p>In this lesson we see a few examples, not really that many, of the genitive case used to express possession. In English we would accomplish this by adding an apostrophe and an s. For example: That boy‘s mother. Let’s see the examples in Polish too. I marked <span class="blue-text">Instrumental</span> in <span class="blue-text">blue</span> and <span class="red-text">Genitive</span> in <span class="red-text">red</span>.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Jestem <span class="blue-text">synem</span> <span class="red-text">tej kobiety</span> </td><td> I am this woman’s son </td></tr>
             <tr><td> Jestem <span class="blue-text">córką</span> <span class="red-text">tego mężczyzny</span> </td><td> I am this man’s daughter </td></tr>
             <tr><td> Mąż <span class="red-text">tej kobiety</span> nie mówi po angielsku </td><td> This woman’s husband does not speak English </td></tr>
             <tr><td> <br> </td></tr>
             <tr><td> And though it wasn’t in the lesson: <br> <br> </td></tr>
             <tr><td> That boy‘s mother </td><td> Matka <span class="red-text">tamtego chłopca</span> </td></tr>
-        </table></div>
+        </table>
 
         <p>Now that we know genitive nouns and pronouns, there’s many more sentence structures we can make. We’re making progress in speaking a little bit more of Polish! Yay!</p>
 
