--- a/lessons/checkpoint_2/17_colors.html
+++ b/lessons/checkpoint_2/17_colors.html
@@ -209,13 +209,13 @@ title: Elisa's Duo Polski - Colors
 
         <p>Now, same as in English, there’s some colors that define varieties of food, such as</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Białe wino </td><td> White wine </td></tr>
             <tr><td> Czerwone wino </td><td> Red wine </td></tr>
             <tr><td> -- </td></tr>
             <tr><td> Białe mięso </td><td> White meat (chicken, fish, etc.) </td></tr>
             <tr><td> Czerwone mięso </td><td> Red meat (pork, beef, etc.) </td></tr>
-        </table></div>
+        </table>
 
         <p>And when we use the colors as nouns, they always stay masculine:
 
@@ -226,7 +226,7 @@ title: Elisa's Duo Polski - Colors
 
         <span class="section">Now let’s see some examples from Duolingo exercises:</span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Masculine </th></tr>
             <tr><td> Ten ptak jest zielony </td><td> This bird is green </td></tr>
             <tr><td> Pomarańczowy kot </td><td> An orange cat </td></tr>
@@ -264,7 +264,7 @@ title: Elisa's Duo Polski - Colors
 
             <tr><th style="border-top: 1px solid #000" colspan="2"> Mixed </th></tr>
             <tr><td> Brązowa mysz je żółty ser </td><td> A brown mouse is eating yellow cheese </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
@@ -571,7 +571,7 @@ title: Elisa's Duo Polski - Colors
 
         <p>Remember sentences can be Genitive because of negative accusative.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <!-- <tr><th> Singular </th> -->
             <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Masculine nouns </th>
             <tr><td> Twój syn nie nosi biał<span class="red-text">ego</span> kapelusz<b>a</b> </td><td> Your son does not wear a white hat </td></tr>
@@ -599,7 +599,7 @@ title: Elisa's Duo Polski - Colors
             <tr><td> Nie mamy żółt<span class="red-text">ych</span> zwierz<b>ąt</b> </td><td> We don’t have yellow animals </td></tr>
             <tr><td> On nie je zielon<span class="red-text">ych</span> jabł<b>ek</b> </td><td> He does not eat green apples </td></tr>
             <th style="border-top: 1px solid #000" colspan="2"></th>
-        </table></div>
+        </table>
 
     </div>
 
