--- a/lessons/checkpoint_2/18_questions.html
+++ b/lessons/checkpoint_2/18_questions.html
@@ -257,7 +257,7 @@ title: Elisa's Duo Polski - Questions
 
         <p>Now there are a few notes on the usage of these words that we find out indirectly through the exercises. Let’s see:</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Nie słyszę pytań </td><td> I don’t hear the questions (Genitive plural of pytanie = pytań)</td></tr>
             <tr><td> Macie pytania? </td><td> Do you have questions? <br> * Same as in English, one “has” questions. So in Polish it’s the verb mieć</td></tr>
             <tr><td> To dobre pytanie! </td><td> That’s a good question!</td></tr>
@@ -267,11 +267,11 @@ title: Elisa's Duo Polski - Questions
             <tr><td> Jaka jest twoja odpowiedź? </td><td> What is your answer? <br> * Questions and answers need descriptive jaki instead of the neutral co</td></tr>
             <tr><td> Dzieci nie znają odpowiedzi </td><td> The children don’t know the answers</td></tr>
             <tr><td> Znamy odpowiedź </td><td> We know the answer <br> * “Knowing an answer” uses the verb znać, not wiedzieć <br> (so it’s not nie wiedzą odpowiedzi)</td></tr>
-        </table></div>
+        </table>
 
         <h3> Basic questions </h3>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><th style="border-top: 1px solid #000" colspan="2"> Co </td></tr>
             <tr><td> Co to jest? </td><td> What is this? (Nominative) </td></tr>
             <tr><td> Co lubisz? </td><td> What do you like? (Accusative) </td></tr>
@@ -301,11 +301,11 @@ title: Elisa's Duo Polski - Questions
             <tr><td> Gdzie są ci mężczyźni? </td><td> Where are these men?
             <tr><td> Gdzie chodzą te kobiety? </td><td> Where do these women go? <br> Here let’s comment on word order.  <br> While Gdzie te kobiety chodzą? Sounds closer to English, in Polish we use the verb before the subject. It’s not incorrect, but it sounds like Yoda from Star Wars. </td></tr>
             <tr><th style="border-top: 1px solid #000" colspan="2"> </td></tr>
-        </table></div>
+        </table>
 
         <h3> Descriptive questions </h3>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><th style="border-top: 1px solid #000" colspan="3"> Jaki </th></tr>
             <tr><td> ♂         </td><td> Jaki chleb lubisz? </td><td> What (kind of) bread do you like? </td></tr>
             <tr><td> ⚲         </td><td> Jakie jest twoje pytanie? </td><td> What is your question? </td></tr>
@@ -334,7 +334,7 @@ title: Elisa's Duo Polski - Questions
             <tr><td> pl. nmp.  </td><td> Czyje dzieci jedzą ciasteczka? </td><td> Whose children are eating the cookies? </td></tr>
 
             <tr><th style="border-top: 1px solid #000" colspan="3"> </th></tr>
-        </table></div>
+        </table>
 
         
 
