--- a/lessons/checkpoint_2/19_present_3.html
+++ b/lessons/checkpoint_2/19_present_3.html
@@ -264,7 +264,7 @@ title: Elisa's Duo Polski - Present 3
         <p>So in this lesson we see a lot of new verbs. It's important to know when to use each verb, considering that sometimes there's no direct translation sometimes. I’ll put notes whenever the comments seem interesting in the lesson exercise. </p>
 
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
 
         <tr><th colspan="2"> Robić
 
@@ -393,7 +393,7 @@ title: Elisa's Duo Polski - Present 3
             <tr><td> Dostarczamy dobre ubrania </td><td> We deliver good clothes </td></tr>
             <tr><td> Oni dostarczają czerwone owoce </td><td> They are delivering red fruit </td></tr>
         
-    </table></div>
+    </table>
 
     </div>
 
@@ -522,11 +522,11 @@ title: Elisa's Duo Polski - Present 3
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Odwiedzam mojego dziadka </td><td> I am visiting my grandfather (Accusative but male animated)</td></tr>
             <tr><td> Szanuję mojego wujka </td><td> I respect my uncle (Accusative but male animated)</td></tr>
             <tr><td> Oni nie szanują mojej dziewczyny! </td><td> They don’t respect my girlfriend! (gen from negation of acc)</td></tr>
-        </table></div>
+        </table>
 
     </div>
 
