--- a/lessons/checkpoint_2/20_time.html
+++ b/lessons/checkpoint_2/20_time.html
@@ -104,7 +104,7 @@ title: Elisa's Duo Polski - Time
 
         <h4> Adverbs - Przysłówki　</h4>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Dzisiaj / Dziś </td>
                     <td> Today </td>
@@ -129,17 +129,17 @@ title: Elisa's Duo Polski - Time
                     <td> Wieczorem </td>
                     <td> at night </td>
                 </tr>
-            </table></div>
+            </table>
 
 
         <h4> Prepositions - Przyimki </h4>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> W / We </td>
                     <td> in / at / on ( More on the grammar section) </td>
                 </tr>
-            </table></div>
+            </table>
 
         <h3> Time periods - Okresy czasu </h3>
 
@@ -240,12 +240,12 @@ title: Elisa's Duo Polski - Time
 
             <p>* This usage of period is both for periods of time, as well as periods in class at school, as well as menstruation.</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Mam okres </td>
                     <td> (I have my period) I am on my period </td>
                 </tr>
-            </table></div>
+            </table>
 
         <h3> Days of the Week - Dni Tydodnia </h3>
 
@@ -477,7 +477,7 @@ title: Elisa's Duo Polski - Time
 
         <span class ="section"> Root of the word  (just interesting, not necessary) </span>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Styczeń </td>
                     <td> nobody knows but.. Maybe siec, meaning felling trees </td>
@@ -526,7 +526,7 @@ title: Elisa's Duo Polski - Time
                     <td> Grudzień </td>
                     <td> Gruda means a lump of frozen soil </td>
                 </tr>
-            </table></div>
+            </table>
 
             <br>
     </div>
@@ -609,7 +609,7 @@ title: Elisa's Duo Polski - Time
 
         <h2> Basic Phrases about Time - Podstawowe zwroty dotyczące czasu </h2>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
                 <tr>
                     <td> What time is it? </td>
                     <td> Która godzina? / Która jest godzina? </td>
@@ -677,7 +677,7 @@ title: Elisa's Duo Polski - Time
                     <td> When is your birthday? </td>
                     <td> Kiedy są twoje urodziny? </td>
                 </tr>
-            </table></div>
+            </table>
 
     </div>
 
@@ -689,7 +689,7 @@ title: Elisa's Duo Polski - Time
 
             <p>Time of day positioning in the sentence is usually at the beginning:</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> <b> Jutro </b> odwiedzamy naszą rodzinę </td>
                     <td> Tomorrow we are visiting our family </td>
@@ -710,11 +710,11 @@ title: Elisa's Duo Polski - Time
                     <td> <b> W piątek </b> słucham muzyki </td>
                     <td> On Friday I listen to music </td>
                 </tr>
-            </table></div>
+            </table>
 
             <p>But it can also be used at the end when you’re talking about time itself.</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Mam czas <b> jutro rano </b> </td>
                     <td> I have time tomorrow morning </td>
@@ -731,7 +731,7 @@ title: Elisa's Duo Polski - Time
                     <td> Kocham <b> piątki</b>! </td>
                     <td> I love Fridays! </td>
                 </tr>
-            </table></div>
+            </table>
 
         <h3> W / We : in / at / on </h3>
 
@@ -749,7 +749,7 @@ title: Elisa's Duo Polski - Time
 
             <p>Days of the week and weekend are an exception, where in English you would say “on”, it becomes accusative. </p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> <b> W piątek </b> słucham muzyki </td>
                     <td> On Friday I listen to music </td>
@@ -762,7 +762,7 @@ title: Elisa's Duo Polski - Time
                     <td> Co robisz <b> w weekend</b>? </td>
                     <td> What are you doing on the weekend? </td>
                 </tr>
-            </table></div>
+            </table>
 
         <h4> Locative - Miejscownik (At / in) </h4>
 
@@ -773,7 +773,7 @@ title: Elisa's Duo Polski - Time
             <p>You can read about the detailed rules of the locative case here: <br>
             <a href="https://mowicpopolsku.com/polish-grammar/cases/locative/">https://mowicpopolsku.com/polish-grammar/cases/locative/</a></p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Moja siostra jest <b> w szkol<span class="red-text">e</span> </b> </td>
                     <td> My sister is <b>at</b> school </td>
@@ -794,16 +794,16 @@ title: Elisa's Duo Polski - Time
                     <td> <b> W kwie<span class="red-text">tniu</span> </b> jem mięso </td>
                     <td> I eat meat in April </td>
                 </tr>
-            </table></div>
+            </table>
 
             <p>Exception: W lutym (in February) (it acts as an adjective in locative even though it’s not)</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> <b> W lut<span class="red-text">ym</span> </b> odwiedzam mojego dziadka </td>
                     <td> In February I visit my grandfather </td>
                 </tr>
-            </table></div>
+            </table>
 
 
         <span class="section"> Masculine singular </span>
@@ -816,16 +816,16 @@ title: Elisa's Duo Polski - Time
 
             <p>A consonant change or softening occurs very often, for example: the ending <i><span class="red-text">-t</span></i> will be replaced by <i><span class="red-text">-cie</span></i>, <i><span class="red-text">-d</span></i> by –dzie, <i><span class="red-text">-ł</span></i> by –le and <i><span class="red-text">-r</span></i> by <i><span class="red-text">-rze</span></i>. Many consonants are softened by <i><span class="red-text">-ie</span></i>, for example: <i><span class="red-text">-p</span></i> (change to <i><span class="red-text">-pie</span></i>), <i><span class="red-text">-m</span></i> (<i><span class="red-text">-mie</span></i>) or <i><span class="red-text">-n</span></i> (<i><span class="red-text">-nie</span></i>). </p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> <b> W listopa<span class="red-text">dzie</span> </b> kupujemy ubrania </td>
                     <td> We buy clothes in November </td>
                 </tr>
-            </table></div>
+            </table>
 
             <p>Exceptions are the masculine nouns: dom (house), pan (mister) and syn (son), which receive the -u suffix instead of -e during the creation of locative forms:</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> dom </td>
                     <td> dom<span class="red-text">u</span> </td>
@@ -838,7 +838,7 @@ title: Elisa's Duo Polski - Time
                     <td> syn </td>
                     <td> syn<span class="red-text">u</span> </td>
                 </tr>
-            </table></div>
+            </table>
 
             <p>The ending <span class="red-text">-u</span> is used among others in the masculine with the following consonants:</p>
 
@@ -846,7 +846,7 @@ title: Elisa's Duo Polski - Time
 
             <p>Where the soft consonants are softened by -iu. If it ends in -ie before the last consonant, and the previous to last consonant is softened as well, it changes to an equivalent.</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Kwiecie<b>ń</b> </td>
                     <td> <b>W kwiet<span class="red-text">niu* </span></b> </td>
@@ -871,7 +871,7 @@ title: Elisa's Duo Polski - Time
                     <td> In December </td>
                     <td> *dz -> d </td>
                 </tr>
-            </table></div>
+            </table>
 
         <span class="section"> Neutral singular </span>
 
@@ -887,12 +887,12 @@ title: Elisa's Duo Polski - Time
 
             <p>The locative of feminine nouns is without any exceptions the same as their dative forms. Consequently most of them in the locative have -(i)e ending. The consonant change and softening occurs very often.</p>
 
-            <div class="table-wrap"><table class="mini-table">
+            <table class="mini-table">
                 <tr>
                     <td> Moja siostra jest <b> w szkol<span class="red-text">e</span> </b> </td>
                     <td> My sister is <b> at </b> school </td>
                 </tr>
-            </table></div>
+            </table>
 
         <span class="section"> Locative plural </span>
 
@@ -900,12 +900,12 @@ title: Elisa's Duo Polski - Time
 
         <p>Locative Pl. = -ach</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
                 <tr>
                     <td> Moje jabłka są <b> w pudełk<span class="red-text">ach</span> </b> </td>
                     <td> My apples are <b> in </b> boxes </td>
                 </tr>
-            </table></div>
+            </table>
 
 
     </div>
