--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -112,7 +112,7 @@ title: Elisa's Duo Polski - Polish basics 2
 
         <h4> Singular - Liczba Pojedyncza </h4>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -126,13 +126,13 @@ title: Elisa's Duo Polski - Polish basics 2
                 <tr><td>♀</td> <td>Dziewczyna   </td> <td>Girl (teenage girl, girlfriend)   </td></tr>
                 <tr><td>⚲</td> <td>Ciasteczko   </td> <td>Cookie *                          </td></tr>
             </tbody>
-        </table></div>
+        </table>
 
         <h4> Plural - Liczba Mnoga </h4>
 
         <p>From now on pl. will be the abbreviation for plural.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -146,7 +146,7 @@ title: Elisa's Duo Polski - Polish basics 2
                 <tr><td>pl. ♂</td> <td>Chłopcy          </td> <td>Boys (little boys)   </td></tr>
                 <tr><td>pl. ⚲</td> <td>Ciasteczka       </td> <td>Cookies *            </td></tr>
             </tbody>
-        </table></div>
+        </table>
 
     </div>
     <div class="regular">
@@ -211,10 +211,10 @@ title: Elisa's Duo Polski - Polish basics 2
         <p>To make a sentence a question
         You can add <span class="violet-text">Czy</span> at the beginning, or just add a question mark at the end.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> <span class="violet-text">Czy</span> jesteś głodna? </td><td> Are you hungry (♀)?</td></tr>
             <tr><td> Masz dzieci? </td><td> Do you have children?</td></tr>
-        </table></div>
+        </table>
 
         <p><b><span class="violet-text">Czy</span></b> means <b>whether</b>, <b>or</b>, or <b>if</b>. It can be used to start questions for other verbs.</p>
 
@@ -235,16 +235,16 @@ title: Elisa's Duo Polski - Polish basics 2
         <span class="blue-text">k</span> → <span class="blue-text">k</span><span class="red-text">iem</span>
         <span class="blue-text">g</span> → <span class="blue-text">g</span><span class="red-text">iem</span></p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Chłopa<span class="blue-text">k</span><span class="red-text">iem</span>: </td><td> Jesteś chłopa<span class="blue-text">k</span><span class="red-text">iem</span> </td><td> You are a (teenage) boy. </td></tr>
-        </table></div>
+        </table>
 
         <p>Instrumental female, same rules as before
         <span class="blue-text">a</span> → <span class="red-text">ą</span></p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Dziewczyn<span class="blue-text">a</span>: </td><td> Jestem dziewczyn<span class="red-text">ą</span> </td><td> I am a (teenage) girl.</td></tr>
-        </table></div>
+        </table>
 
         <h4 >Accusative Case - Biernik </h4>
 
@@ -254,9 +254,9 @@ title: Elisa's Duo Polski - Polish basics 2
 
         Accusative neuter (plural), so it doesn't change.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Ciasteczka: </td><td> One mają ciasteczka </td><td> (♀)They have cookies. </td></tr>
-        </table></div>
+        </table>
     </div>
 
     <div class="nav-buttons">
