--- a/lessons/checkpoint_1/12_negation.html
+++ b/lessons/checkpoint_1/12_negation.html
@@ -23,17 +23,17 @@ title: Elisa's Duo Polski - Negation
 
         <p>The time has come for negative sentences! The first thing we notice is, very basically speaking, we just have to put “<span class="violet-text">Nie</span>” into the sentence for it to become negative. But we have to be careful: “Nie” always comes before the thing we want to negate. In most cases right now, we want to negate the verb of the sentence. <span class="violet-text">Nie</span> + <span class="blue-text">Verb.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td><span class="violet-text">Nie</span> <span class="blue-text">noszę</span> koszuli </td><td> I do not wear a shirt</td></tr>
             <tr><td>To <span class="violet-text">nie</span> <span class="blue-text">jest</span> pies </td><td> This is not a dog</td></tr>
-        </table></div>
+        </table>
 
         <p>We have seen an exception in definitions X to Y / X to <span class="violet-text">nie</span> Y. It doesn’t really have a verb.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td>Lew to kot </td><td> A lion is a cat.</td></tr>
             <tr><td>Jabłko to <span class="violet-text">nie</span> zwierzę </td><td> An apple is not an animal</td></tr>
-        </table></div>
+        </table>
 
         <p>It is as if it had some invisible '<span class="blue-text">jest</span>': "Lew to [<span class="blue-text">jest</span>/] kot", "Jabłko to <span class="violet-text">nie</span> [<span class="blue-text">jest</span>/] zwierzę". So we could say that anyway you negate the invisible <span class="blue-text">być</span> in there.
 
@@ -45,7 +45,7 @@ title: Elisa's Duo Polski - Negation
 
         <span class="section"> For example - Na przykład </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Mamy koszul<span class="blue-text">ę</span> </td><td> We have a shirt              </td><td> <span class="blue-text"><b>Accusative</b></span> Singular </td></tr>
             <tr><td> Nie mamy koszul<span class="red-text">i</span> </td><td> We do not have a shirt    </td><td> Negative <span class="violet-text"><b>Genitive</b></span> Singular </td></tr>
             <tr><td> Widzimy kaw<span class="blue-text">ę</span> </td><td> We see coffee                </td><td> <span class="blue-text"><b>Accusative</b></span> Singular </td></tr>
@@ -55,7 +55,7 @@ title: Elisa's Duo Polski - Negation
             <tr><td> To nie jest dom </td><td> This is not a house          </td><td> Negative <b>Nominative</b> Singular </td></tr>
             <tr><td> Jestem kobietą </td><td> I am a woman                  </td><td> <b>Instrumental</b> Singular </td></tr>
             <tr><td> Nie jestem kobietą </td><td> I am not a woman          </td><td> Negative <b>Instrumental</b> Singular </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
@@ -113,24 +113,24 @@ title: Elisa's Duo Polski - Negation
 
         <span class="section"> For example - Na przykład </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Nie lubię tamt<span class="red-text">ej</span> kobiet<span class="red-text">y</span> </td><td> I don’t like that woman                       </td><td> Genitive Feminine </td></tr>
             <tr><td> Ta kobieta nie lubi tamt<span class="red-text">ej</span> kaw<span class="red-text">y</span> </td><td> This woman doesn’t like that coffee.   </td><td> Genitive Feminine </td></tr>
             <tr><td> Nie widzę te<span class="red-text">go</span> ps<span class="red-text">a</span> </td><td> I don’t see this dog                                </td><td> Genitive Masculine </td></tr>
             <tr><td> Nie widzę tamte<span class="red-text">go</span> mężczyzn<span class="red-text">y</span> </td><td> I don’t see that man.                      </td><td> Genitive Masculine </td></tr>
             <tr><td> Nie widzę te<span class="red-text">go</span> dzieck<span class="red-text">a</span> </td><td> I don’t see this child                          </td><td> Genitive Neuter </td></tr>
             <tr><td> Nie lubię te<span class="red-text">go</span> ciasteczk<span class="red-text">a</span> </td><td> I don’t like this cookie                     </td><td> Genitive Neuter </td></tr>
-        </table></div>
+        </table>
 
         <span class="section"> For example - Na przykład </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><td> Mali chłopcy nie lubią zupy </td><td> Little boys don’t like soup </td></tr>
             <tr><td> Nie widzę kobiety </td><td> I don’t see the woman </td></tr>
             <tr><td> Nie widzę dziewczynki </td><td> I don’t see the girl </td></tr>
             <tr><td> Oni nie słyszą konia </td><td> They don’t hear the horse. </td></tr>
             <tr><td> Nie słyszę tamtego kota </td><td> I don’t hear that cat </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
