--- a/lessons/checkpoint_1/13_possessive_pronouns.html
+++ b/lessons/checkpoint_1/13_possessive_pronouns.html
@@ -112,7 +112,7 @@ title: Elisa's Duo Polski - Possessive Pronouns
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr> <th colspan="2"> <span class="blue-text"> Male Singular </span> </th></tr>
             <tr> <td> Mój <span class="blue-text">kot</span> jest mały </td><td> My cat is small </td></tr>
             <tr> <td> Twój <span class="blue-text">koń</span> je ciasteczka </td><td> Your horse is eating cookies </td></tr>
@@ -157,7 +157,7 @@ title: Elisa's Duo Polski - Possessive Pronouns
             <tr> <td> Twoje <span class="mustard-text">dziewczynki</span> </td><td> Your daughters </td></tr>
             <tr> <td> Nasze <span class="mustard-text">pomidory</span> są dobre </td><td> Our tomatoes are good </td></tr>
             <tr> <td> Wasze <span class="mustard-text">dzieci</span> lubią ciasteczka </td><td> Your children like cookies </td></tr>
-        </table></div>
+        </table>
 
     </div>
 
@@ -171,11 +171,11 @@ title: Elisa's Duo Polski - Possessive Pronouns
 
         But isn't this in accusative? You might ask, and indeed it is. But it's the only accusative Duolingo will give us up to now. That's because three pronouns in Polish are pretty stable no matter the conjugation and if you look at the table in the previous section you might have noticed.</p>
 
-        <div class="table-wrap"><table class="mini-table">
+        <table class="mini-table">
             <tr><th> Jej </th><th> Her </th></tr>
             <tr><th> Jego </th><th> His </th></tr>
             <tr><th> Ich </th><th> Their </th></tr>
-        </table></div>
+        </table>
 
         <p>These three pronouns stay the same throughout all cases, and so you only need to memorize them in this form. Isn't that great?</p>
 
